Improve error messages + logs