@@ -2,7 +2,6 @@ package com.luispuchol.selfbill.selfbill_api.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import lombok.RequiredArgsConstructor;
@@ -10,12 +9,12 @@ import lombok.RequiredArgsConstructor;
 import com.luispuchol.selfbill.selfbill_api.dto.articleDTO.ArticleRequest;
 import com.luispuchol.selfbill.selfbill_api.dto.articleDTO.ArticleResponse;
 import com.luispuchol.selfbill.selfbill_api.entity.Article;
+import com.luispuchol.selfbill.selfbill_api.exception.BusinessException;
+import com.luispuchol.selfbill.selfbill_api.exception.ErrorCode;
 import com.luispuchol.selfbill.selfbill_api.mapper.ArticleMapper;
 import com.luispuchol.selfbill.selfbill_api.repository.ArticleRepository;
 
 import jakarta.transaction.Transactional;
-
-import com.luispuchol.selfbill.selfbill_api.exception.BusinessException;
 
 @Service
 @RequiredArgsConstructor
@@ -29,14 +28,14 @@ public class ArticleService implements IArticleService {
     public List<ArticleResponse> getAllArticles() {
         return articleRepository.findAll().stream()
                 .map(articleMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     @Override
     public ArticleResponse getArticleById(Integer id) {
         Article article = articleRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Article not found: " + id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.ARTICLE_NOT_FOUND, id));
         return articleMapper.toResponse(article);
     }
 
@@ -44,7 +43,7 @@ public class ArticleService implements IArticleService {
     @Override
     public ArticleResponse getArticleByCode(Integer code) {
         Article article = articleRepository.findByCode(code)
-                .orElseThrow(() -> new BusinessException("Article not found with code: " + code));
+                .orElseThrow(() -> new BusinessException(ErrorCode.ARTICLE_NOT_FOUND, code));
         return articleMapper.toResponse(article);
     }
 
@@ -52,7 +51,7 @@ public class ArticleService implements IArticleService {
     @Override
     public ArticleResponse getArticleByName(String name) {
         Article article = articleRepository.findByNameIgnoreCase(name)
-                .orElseThrow(() -> new BusinessException("Article not found: " + name));
+                .orElseThrow(() -> new BusinessException(ErrorCode.ARTICLE_NOT_FOUND, name));
         return articleMapper.toResponse(article);
     }
 
@@ -61,7 +60,7 @@ public class ArticleService implements IArticleService {
     public ArticleResponse createArticle(ArticleRequest articleRequest) {
         Optional<Article> existingByCode = articleRepository.findByCode(articleRequest.getCode());
         if (existingByCode.isPresent()) {
-            throw new BusinessException("Already exists article with code: " + articleRequest.getCode());
+            throw new BusinessException(ErrorCode.ARTICLE_DUPLICATE_CODE, articleRequest.getCode());
         }
 
         Article article = articleMapper.toEntity(articleRequest);
@@ -73,12 +72,12 @@ public class ArticleService implements IArticleService {
     @Override
     public ArticleResponse updateArticle(Integer id, ArticleRequest articleRequest) {
         Article existingArticle = articleRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Article not found with ID: " + id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.ARTICLE_NOT_FOUND, id));
 
         if (!existingArticle.getCode().equals(articleRequest.getCode())) {
             Optional<Article> articleWithSameCode = articleRepository.findByCode(articleRequest.getCode());
             if (articleWithSameCode.isPresent()) {
-                throw new BusinessException("Already exists another article with code: " + articleRequest.getCode());
+                throw new BusinessException(ErrorCode.ARTICLE_DUPLICATE_CODE, articleRequest.getCode());
             }
         }
 
@@ -91,7 +90,7 @@ public class ArticleService implements IArticleService {
     @Override
     public void deleteArticle(Integer id) {
         Article article = articleRepository.findById(id)
-                .orElseThrow(() -> new BusinessException("Article not found with ID: " + id));
+                .orElseThrow(() -> new BusinessException(ErrorCode.ARTICLE_NOT_FOUND, id));
 
         articleRepository.delete(article);
     }
